@startuml

entity "tieu_chuan" as tieu_chuan {
	* ma_tieu_chuan
	+ ten_tieu_chuan
	+ thong_tin_mo_ta
}

entity "tieu_chi" as tieu_chi {
	* ma_tieu_chi
	+ noi_dung
	+ thong_tin_goi_y_tieu_chi
}

entity "minh_chung" as minh_chung {
	* ma_minh_chung
	+ ten_minh_chung
	+ tom_tat_noi_dung
	+ loai_minh_chung
	+ tap_tin_chua_minh_chung
}

entity "minh_hoa" as minh_hoa {
}

tieu_chuan |o--|{ tieu_chi

minh_chung |o--|{ minh_hoa

tieu_chi |o--|{ minh_hoa

@enduml